package stakemate.use_case.view_profile;

public enum SortCriteria {
    DATE,
    SIZE
}
